src/test/compile-fail/view-items-at-top.rs
use std;

fn f() {
}

import std::io::println;    //~ ERROR view items must be declared at the top

fn main() {
}

